# imod_coupler

./: .buildinfo  .flake8  .gitignore  .sonarcloud.properties  3dviewer_user_manual.html  CHANGELOG.md  README.md  TECHNICAL.md  _delete_this.txt  baseschema.json  configuration.html  configuration.md  coupler_index.html  environment-minimal.yml  environment.yml  further_links.html  genindex.html  guide-to-publish.md  index.html  lezen.py  metamodschema.json  mypy-imodc-report.xml  mypy.ini  objects.inv  open-vscode.bat  pixi.toml  pyproject.toml  python_getting_started.html  python_index.html  python_install.html  qgis_user_manual.html  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  technical.html  test.txt  viewer_index.html  viewer_install.html  (+5 more)
.dvc/: config
.github/workflows/: CI.yml  build_executable.yml  check-packages.yml  docs.yml  lint.yml  pixi_auto_update.yml  test_primod.yml
.teamcity/: pom.xml  settings.kts
.teamcity/Deploy/: DeployProject.kt
.teamcity/IMODCollector/: Project.kt
.teamcity/Pixi/: PixiProject.kt
.teamcity/Primod/: Project.kt
.teamcity/Templates/: GitHubIntegrationTemplate.kt
.teamcity/Weekly/: WeeklyProject.kt
.teamcity/_Self/: Project.kt
.teamcity/iMOD6_Coupler/: project-config.xml
.teamcity/iMOD6_Coupler_IMODCollector/: project-config.xml
.teamcity/iMOD6_Coupler_Primod/: project-config.xml
.teamcity/iMOD6_IMOD6collectorDaily/: project-config.xml
.teamcity/iMOD6_ImodCouplerRelease/: project-config.xml
.teamcity/iMOD6_ImodCouplerRelease_IMODCollector/: project-config.xml
.teamcity/iMOD6_ImodCouplerRelease_Primod/: project-config.xml
_sources/: 3dviewer_user_manual.rst.txt  configuration.rst.txt  further_links.rst.txt  index.rst.txt  technical.rst.txt  viewer_index.rst.txt  viewer_install_msi.rst.txt  viewer_known_issues.rst.txt
docs/: conf.py  configuration.rst  coupler_index.rst  index.rst  python_getting_started.rst  python_index.rst  python_install.rst  qgis_user_manual.rst  technical.rst  viewer_install.rst  viewer_install_index.rst  workflow_index.rst  workflow_wq.rst
docs/_static/: iMOD_logo.eps
docs/_templates/: navbar.html
docs/config/: dfm_metamod.toml  metamod.toml  ribamod.toml
docs/tables/: supported_packages.csv
examples/: dummy_example.py  mapping_example.py  mapping_functions.py
examples/input_example_mapping/: DFM1DWATLEVTOMFRIV_H.DMM  MFRIVTODFM1D_Q.DMM
examples/modflow_msw_dfm_simulation/: create_dflowfm_model.py  create_discretization.py  create_metaswap_model.py  create_modflow_model.py  run_models.py
imod-coupler/: __main__.py
imod_coupler/: __init__.py  __main__.py  config.py  errors.py  kernel.py  metamod.py  parser.py  utils.py
imod_coupler/drivers/: __init__.py  driver.py  kernel_config.py  match_driver.py
imod_coupler/kernelwrappers/: mf6_newton_wrapper.py  mf6_wrapper.py  msw_wrapper.py  ribasim_wrapper.py  swap_wrapper.py
imod_coupler/logging/: exchange_collector.py
pre-processing/: README.md  pyproject.toml
pre-processing/primod/: __init__.py  coupled_model.py  coupledmodel.py  metamod.py  model_mixin.py  ribametamod.py  ribamod.py  typing.py
pre-processing/primod/driver_coupling/: __init__.py  driver_coupling_base.py  metamod.py  ribameta.py  ribamod.py  util.py
pre-processing/primod/mapping/: __init__.py  mappingbase.py  node_basin_mapping.py  node_max_layer.py  node_svat_mapping.py  rch_svat_mapping.py  svat_basin_mapping.py  svat_user_demand_mapping.py  wel_svat_mapping.py
pre-processing/primod/metamod/: __init__.py  mappingbase.py  metamod.py  node_svat_mapping.py  rch_svat_mapping.py  wel_svat_mapping.py
pre-processing/primod/ribametamod/: __init__.py  node_svat_mapping.py  rch_svat_mapping.py  ribametamod.py
pre-processing/primod/ribamod/: __init__.py  exchange_creator.py  ribamod.py
scripts/: download_imod_collector.py  download_modflow.py  download_regression.py  download_ribasim.py  extract_changelog_notes.py  generate_env_file.py
scripts/templates/: .env.jinja
tests/: conftest.py  dfm_test_initialization.py  test_arun_tmodel.py  test_config.py  test_config_cases.py  test_dataframe_comparison.py  test_dfm_exchange.py  test_dfm_metamod.py  test_dfm_metamod_cases.py  test_dfm_metamod_model.py  test_dfm_utilities.py  test_dfm_wrapper.py  test_exchange_collector.py  test_exchanges.py  test_general.py  test_init_riba.py  test_log.py  test_logger.py  test_mapping.py  test_mapping_cases.py  test_mapping_example.py  test_metamod.py  test_metamod_cases.py  test_mf6_utilities.py  test_mf6_wrapper.py  test_modstrip.py  test_modstrip_full_range_dbase.py  test_parser.py  test_ribametamod.py  test_ribametamod.py.orig  test_ribametamod_cases.py  test_ribamod.py  test_ribamod_cases.py  test_run_tmodel.py  test_run_tmodel_cases.py  test_run_tmodel_d.py  test_run_tmodel_f.py  test_run_tmodel_short.py  test_run_tmodel_short_cases.py  test_shared_libraries.py  (+8 more)
tests/fixtures/: common.py  fixture_exchange_collector.py  fixture_fixed_format_parser.py  fixture_imodc_executable.py  fixture_inputfile.py  fixture_metaswap.py  fixture_model.py  fixture_models.py  fixture_modflow.py  fixture_paths.py  fixture_ribametamod.py  fixture_ribasim.py  fixture_run_coupler_function.py
tests/test_imod_coupler/: test.py  test_config.py  test_config_cases.py  test_exchange_collector.py  test_mapping.py  test_mapping_cases.py  test_metamod.py  test_metamod_cases.py  test_metamod_regrid.py  test_metamod_regrid_cases.py  test_mf6_wrapper.py  test_modstrip.py  test_msw_wrapper.py  test_ribametamod.py  test_ribametamod_cases.py  test_ribamod.py  test_ribamod_cases.py  test_ribasim_wrapper.py  test_run_model_bofek.py  test_utilities.py  test_waterbalance_script.py  test_wrappers.py
tests/test_primod/: test_mixin.py  test_node_svat_mapping.py  test_preprocessing_metamod.py  test_preprocessing_ribametamod.py  test_preprocessing_ribamod.py  test_rch_svat_mapping.py  test_ribamod_exchange_creator.py  test_ribamode_exchange_creator.py  test_wel_svat_mapping.py
tests/test_user_acceptance/: test_metamod_lhm.py  test_mount_exists.py
(+6614 files in other folders)
