[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imod_coupler"
description = "iMOD Coupler can be used to couple hydrological kernels"
readme = "README.md"
authors = [
    { name = "Martijn Russcher", email = "Martijn.Russcher@deltares.nl" },
    { name = "Robert Leander", email = "Robert.Leander@deltares.nl" },
    { name = "Joeri van Engelen", email = "Joeri.vanEngelen@deltares.nl" },
    { name = "Hendrik Kok", email = "Hendrik.Kok@deltares.nl"},
    { name = "Huite Bootsma", email = "Huite.Bootsma@deltares.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "h5netcdf",
    "loguru",
    "numpy",
    "pydantic",
    "ribasim_api",
    "scipy",
    "tomli-w",
    "tomli",
    "xmipy",
]
dynamic = ["version"]

[tool.hatch.version]
path = "imod_coupler/__init__.py"

[project.scripts]
imodc = "imod_coupler.__main__:main"

[project.urls]
Source = "https://github.com/Deltares/imod_coupler"

[tool.ruff]
lint.select = ["C4", "E", "F", "I", "NPY", "PD", "UP"]
lint.ignore = ["E501", "PD004"]
lint.fixable = ["I"]

[tool.mypy]
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]

[tool.pytest]
markers = ["user_acceptance: marks tests as slow (deselect with '-m \"not user_acceptance\"')",]