[metadata]
name = imod_coupler
version = attr: imod_coupler.__version__
description = iMOD Coupler can be used to couple hydrological kernels
long_description = file: README.md
long_description_content_type = text/markdown
author = Julian Hofer, Martijn Russcher, Robert Leander, Joeri van Engelen
author_email = Julian.Hofer@deltares.nl, Martijn.Russcher@deltares.nl, Robert.Leander@deltares.nl, Joeri.vanEngelen@deltares.nl
license = MIT
license_files = LICENSE
platform = Windows
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/Deltares/imod_coupler
download_url = https://pypi.org/project/imod_coupler/

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    netcdf4
    numpy
    scipy
    xmipy
    tomli
    tomli-w
    pydantic
    loguru

[options.extras_require]
tests =
    pytest
    pytest-xdist
    pytest-cases
    pytest-dotenv
lint =
    mypy
    black
    isort
docs = 
    sphinx<6 # Limit sphinx version until pydata-sphinx-theme is released
    pydata-sphinx-theme
check-packages =
    build
    twine

[options.entry_points]
console_scripts =
    imodc = imod_coupler.__main__:main

[options.package_data]
imod_coupler = py.typed
